--- a/src/01-body/bab2.tex
+++ b/src/01-body/bab2.tex
@@ -77,7 +77,7 @@ Virtual Network merupakan dasar dari sistem yang akan dikembangkan nantinya sert
 dimana setiap lab akan berada dalam sebuah lingkungan berupa Virtual Network, sehingga setiap \textit{instance} dari lab bersifat unik dan terisolasi satu sama lain.
 \par
 %-----------------------------------------------------------------------------%
-\subsection{\latex~Secara Singkat}
+\subsection{Virtual Lab Based Learning}
 \label{sec:latexBrief}
 %-----------------------------------------------------------------------------%
 Berdasarkan \cite{latex:intro}: \\
